# cookbook

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  example.env  fly.toml  index.ts  tsconfig.json
bot/: README.md
go-oauth-cli-app/: README.md  client_metadata.json  go.mod  go.sum  main.go  sqlitestore.go
go-oauth-cli-app/static/: oauth-client-metadata.json
go-oauth-web-app/: .gitignore  README.md  base.html  error.html  go.mod  go.sum  login.html  main.go  post.html  post_success.html  sqlitestore.go  sqlitestore_test.go  util.go
go-repo-export/: .gitignore  README.md  go.mod  go.sum  main.go  test.sh
go-xrpc-server/: .gitignore  README.md  go.mod  go.sum  main.go
oauth-react-native-expo/: app.json  oauth-client-metadata.json  package-lock.json  package.json
oauth-react-native-expo/app/: _layout.tsx
oauth-react-native-expo/assets/: oauth-client-metadata.json
oauth-react-native-expo/components/: SessionProvider.tsx
python-bsky-post/: README.md  create_bsky_post.py
python-oauth-web-app/: .gitignore  README.md  app.py  atproto_identity.py  atproto_oauth.py  atproto_security.py  atproto_util.py  bsky_util.py  create_key.py  example.env  generate_jwk.py  pyproject.toml  schema.sql  www_authenticate.py
python-oauth-web-app/templates/: base.html  bsky_post.html  bsky_post_success.html  error.html  home.html  login.html
react-native-oauth/: README.md  app.json  metro.config.js  oauth-client-metadata.json  package.json
react-native-oauth/components/: SessionProvider.tsx  SignInForm.tsx
react-spa-oauth/: README.md  oauth-client-metadata.json  package.json  rollup.config.cjs  tsconfig.json
react-spa-oauth/src/: App.tsx  (+5 more)
ts-bot/: .gitignore  README.md  example.env  index.js  index.ts  package-lock.json  package.json  tsconfig.json
vanillajs-oauth-web-app/: .gitignore  README.md  index.html  main.js  oauth-client-metadata.example.json
(+8 files in other folders)
